RESOLVED FIXED88130
[BlackBerry] Fix the return value checking in SelectPopupClient
https://bugs.webkit.org/show_bug.cgi?id=88130
Summary [BlackBerry] Fix the return value checking in SelectPopupClient
Crystal Zhang
Reported 2012-06-01 13:33:06 PDT
In SelectPopupClient, return '1' means selected, '0' means not selected, the ASCII value of '0' is 48, not 32, use '0' to be more readable.
Attachments
patch (2.33 KB, patch)
2012-06-01 13:36 PDT, Crystal Zhang
no flags
Crystal Zhang
Comment 1 2012-06-01 13:36:52 PDT
Rob Buis
Comment 2 2012-06-01 13:46:46 PDT
Comment on attachment 145370 [details] patch Looks good.
WebKit Review Bot
Comment 3 2012-06-01 15:34:47 PDT
Comment on attachment 145370 [details] patch Clearing flags on attachment: 145370 Committed r119290: <http://trac.webkit.org/changeset/119290>
WebKit Review Bot
Comment 4 2012-06-01 15:34:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.