[BlackBerry] Fix the return value checking in SelectPopupClient https://bugs.webkit.org/show_bug.cgi?id=88130

Patch by Crystal Zhang <haizhang@rim.com> on 2012-06-01
Reviewed by Rob Buis.

In SelectPopupClient, return '1' means selected, '0' means not selected,
the ASCII value of '0' is 48, not 32, use '0' to be more readable.

* WebCoreSupport/SelectPopupClient.cpp:
(WebCore::SelectPopupClient::setValueAndClosePopup):

Canonical link: https://commits.webkit.org/105967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119290 268f45cc-cd09-0410-ab3c-d52691b4dbfc